[package]
name = "mtcs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["graph", "graph-algorithms", "finance"]
categories = ["algorithms", "data-structures", "finance"]
repository = "https://github.com/informalsystems/mtcs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    Algorithm implementations for Multilateral Trade Credit Set-off (MTCS)
"""

[[bin]]
name = "mtcs-cli"
path = "src/cli/main.rs"

[dependencies]
csv = "1.1.6"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4"
mcmf = "2.0.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
