[package]
name = "mtcs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["graph", "graph-algorithms", "finance"]
categories = ["algorithms", "data-structures", "finance"]
repository = "https://github.com/informalsystems/mtcs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    Algorithm implementations for Multilateral Trade Credit Set-off (MTCS)
"""

[dependencies]
mcmf = "2.0.0"
csv = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }